Vue Starter Router

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "vue": "^3.4.21"
+        "vue": "^3.4.21",
+        "vue-router": "^4.3.0"
     }
 }
