Vue Starter SPA

--- a/.env.production
+++ b/.env.production
@@ -20,11 +20,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+# DB_CONNECTION=mysql
+# DB_CONNECTION=mariadb
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+# DB_COLLATION=utf8mb4_general_ci
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -46,13 +49,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=smtp
+MAIL_HOST="smtp.gmail.com"
+MAIL_PORT=587
+MAIL_ENCRYPTION=tls
+MAIL_USERNAME="email@gmail.com"
+MAIL_PASSWORD=""
+MAIL_FROM_ADDRESS="email@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
