--- a/.env
+++ b/.env
@@ -20,11 +20,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+# DB_CONNECTION=mysql
+# DB_CONNECTION=mariadb
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+# DB_COLLATION=utf8mb4_general_ci
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
