--- a/.htaccess
+++ b/.htaccess
@@ -17,10 +17,19 @@ Options -Indexes -MultiViews +SymLinksIfOwnerMatch
   RewriteRule ^$ public/index.php [L]
   RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
   RewriteRule (^\.|/\.) - [F]
+
+  # SSL
+  RewriteEngine On
+  RewriteCond %{SERVER_PORT} 80
+  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+
+  #RewriteEngine On
+  #RewriteCond %{REQUEST_FILENAME} !-d
+  #RewriteRule ^(.*)/$ /$1 [L,R]
 </IfModule>
 
 <Files .env>
-   order allow,deny
+   Order allow,deny
    Deny from all
 </Files>
 
