--- a/.htaccess
+++ b/.htaccess
@@ -19,9 +19,9 @@ Options -Indexes -MultiViews +SymLinksIfOwnerMatch
   RewriteRule (^\.|/\.) - [F]
 
   # SSL
-  RewriteEngine On
-  RewriteCond %{SERVER_PORT} 80
-  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+  #RewriteEngine On
+  #RewriteCond %{SERVER_PORT} 80
+  #RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
   #RewriteEngine On
   #RewriteCond %{REQUEST_FILENAME} !-d
